# DLNLP_assignment_25

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: data.csv
data/processed/lora_dataset/: nushu_lora_dataset.json
data/raw/: data.csv
docs/: README.md  about.html  index.html  models.html  scripts.js  styles.css
env/: requirements.txt  setup_env.sh
evaluation_results/: metrics_summary.csv  prediction_results.csv
latex/: Report_DLNLP_25_SN24076607.aux  Report_DLNLP_25_SN24076607.bbl  Report_DLNLP_25_SN24076607.blg  Report_DLNLP_25_SN24076607.fdb_latexmk  Report_DLNLP_25_SN24076607.fls  Report_DLNLP_25_SN24076607.out  Report_DLNLP_25_SN24076607.tex  Report_DLNLP_25_SN24076607.xdv  refs.bib
latex/images/: nvshu_ragsystem.drawio  nvshu_system.drawio
src/: add_vector_index_to_kg.py  create_knowledge_graph.py  deploy_rag_with_deepseek.py
src/lora_finetune/: evaluate_finetuned_model.py  lora_finetune.py
src/utils/: add_font_toCSV.py  generate_lora_dataset.py  gpt4o_search.py  translator.py  unicode_helpers.py
