[project]
name = "dlnlp-assignment-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.1",
    "deepl>=1.22.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.58",
    "langchain-huggingface>=0.1.2",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.16",
    "matplotlib>=3.10.1",
    "neo4j>=5.28.1",
    "nest-asyncio>=1.6.0",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "peft>=0.15.2",
    "py-translate>=1.0.3",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.0",
    "translate>=3.6.1",
]
